--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "cors": "^2.8.4",
+    "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
     "react": "^16.3.2",
