--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
     "react": "^16.3.2",
