--- a/package.json
+++ b/package.json
@@ -19,19 +19,18 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "cors": "^2.8.4",
     "es6-promise": "^4.2.4",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.22.2",
-    "mongoose": "^5.2.4",
     "morgan": "^1.9.0",
+    "mysql": "^2.16.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
@@ -41,6 +40,6 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.17.3"
   }
 }
