--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
