--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.24.1",
+		"bcrypt": "^3.0.0",
 		"es6-promise": "^4.2.4",
 		"express": "^4.16.3",
 		"file-loader": "^1.1.11",
